@@ -75,6 +75,7 @@
                     --add-exports=java.base/sun.net.util=ALL-UNNAMED
                     --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
                     --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
